// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItem renders with defaultProps 1`] = `
<button
  className="ax-context-menu__item"
  data-ax-context-menu-item={true}
  disabled={undefined}
  onClick={undefined}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with disabled 1`] = `
<button
  className="ax-context-menu__item"
  data-ax-context-menu-item={true}
  disabled={true}
  onClick={undefined}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with multiSelect 1`] = `
<button
  className="ax-context-menu__item"
  data-ax-context-menu-item={true}
  disabled={undefined}
  onClick={undefined}
>
  <div
    className="ax-context-menu__item-checkbox"
  >
    <label
      className="ax-checkbox ax-space--x2"
      onClick={undefined}
      title={undefined}
    >
      <input
        checked={undefined}
        className="ax-checkbox__input"
        disabled={undefined}
        name={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <span
        className="ax-checkbox__indicator"
      />
    </label>
  </div>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with multiSelect and selected 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--selected ax-text--strong"
  data-ax-context-menu-item={true}
  disabled={undefined}
  onClick={undefined}
>
  <div
    className="ax-context-menu__item-checkbox"
  >
    <label
      className="ax-checkbox ax-space--x2"
      onClick={undefined}
      title={undefined}
    >
      <input
        checked={true}
        className="ax-checkbox__input"
        disabled={undefined}
        name={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <span
        className="ax-checkbox__indicator"
      />
    </label>
  </div>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with multiSelect and title 1`] = `
<button
  className="ax-context-menu__item"
  data-ax-context-menu-item={true}
  disabled={undefined}
  onClick={undefined}
  title="Lorem ipsum dolor sit amet"
>
  <div
    className="ax-context-menu__item-checkbox"
  >
    <label
      className="ax-checkbox ax-space--x2"
      onClick={undefined}
      title={undefined}
    >
      <input
        checked={undefined}
        className="ax-checkbox__input"
        disabled={undefined}
        name={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <span
        className="ax-checkbox__indicator"
      />
    </label>
  </div>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with selected 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--selected ax-text--strong"
  data-ax-context-menu-item={true}
  disabled={undefined}
  onClick={undefined}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
  <div
    className="ax-context-menu__item-icon"
  >
    <svg
      className="ax-icon ax-icon--tick ax-cloak ax-cloak--visible"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M3.25 8.25L6 11l6.75-6.75\\" fill-rule=\\"nonzero\\" stroke=\\"currentColor\\" stroke-width=\\"2.1\\" fill=\\"none\\"/>",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </div>
</button>
`;

exports[`ContextMenuItem renders with title 1`] = `
<button
  className="ax-context-menu__item"
  data-ax-context-menu-item={true}
  disabled={undefined}
  onClick={undefined}
  title="Lorem ipsum dolor sit amet"
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;
